--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -614,7 +614,7 @@ pages = {223--233}
 }
 
 @article{Ritschel:2009:microrendering,
- author = {Ritschel, T. and Engelhardt, T. and Grosch, T. and Seidel, H.-P. and Kautz, J. and Dachsbacher, C.},
+ author = {Ritschel, Tobias and Engelhardt, Thomas and Grosch, Thorsten and Seidel, Hans-Peter and Kautz, Jan and Dachsbacher, Carsten},
  title = {Micro-rendering for Scalable, Parallel Final Gathering},
  journal = {ACM Trans. Graph.},
  issue_date = {December 2009},
