--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -112,6 +112,15 @@
 \include{chap-implementation}
 \include{chap-results}
 \include{chap-conclusion}
+
+\chapter{purgatory}
+
+\todo[color=white]{many-light theory}
+- focusing on why this is a valid model
+- maybe explain clamping here and leave it out everywhere else?
+
+\todo[color=green]{formatting requirements? like that comma after e.g. weirdness}
+
 % \include{chap-examples}
 % \include{chap-moreexamples}
 
